# SPL_SPLFLIX

./: CMakeLists.txt  README.md  makefile
include/: Action.h  Session.h  User.h  Watchable.h
src/: Action.cpp  Main.cpp  Session.cpp  User.cpp  Watchable.cpp
